fixed button not being aligned by a pixel

--- a/src/client/styles/saved-trips.scss
+++ b/src/client/styles/saved-trips.scss
@@ -3,7 +3,7 @@
     box-sizing: border-box;
     padding: 0.8em;
     padding-bottom: 0;
-    width: 100%;
+    width: 98%;
     margin: auto;
     border: 5px solid #fff;
 }
